<?xml version="1.0"?>
<package format="2">
  <name>robot_gui_bridge</name>
  <version>0.0.0</version>
  <description>The robot_gui_bridge package</description>

  <maintainer email="m@todo.todo">m</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosbridge_server</build_depend>
  <build_export_depend>rosbridge_server</build_export_depend>
  <exec_depend>rosbridge_server</exec_depend>


  <export>
  
  </export>
</package>
