<?xml version="1.0"?>
<package format="2">
  <name>ros_tutorials_service</name>
  <version>0.1.0</version>
  <description>ROS tutorial package to learn the service</description>
  <maintainer email="kim031504@naver.com">Kyomin Kim</maintainer>
  <license>Apache License 2.0</license>
  <author email="kim031504@naver.com">Kyomin Kim</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  
  <exec_depend>message_generation</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export></export>
</package>
